--- a/css/homepage.css
+++ b/css/homepage.css
@@ -4,3 +4,18 @@
   margin: 10px;
   max-width: 500px;
 }
+
+#my-portrait {
+  width: 300px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border: 5px solid #b6692a;
+}  
+
+p{
+  margin-right: 30px;
+}
+.big-tite{
+  font-size: x-large;
+}
