--- a/lab15/css/lab.css
+++ b/lab15/css/lab.css
@@ -6,5 +6,11 @@
     margin-bottom: 10px;
     border: solid 1px #888;
     background-color: #DDD8C4;
-  }
+  } 
 
+#output2, #output {
+  font-size: xx-large;
+  text-align: center;
+  background-color:bisque;
+  margin: 20px;
+}
